Fix vertical bar display on mobile resize

--- a/frontend/src/settings.css
+++ b/frontend/src/settings.css
@@ -1,7 +1,3 @@
-h2 {
-    margin-top: 0;
-}
-
 .settings-section {
     background-color: var(--dark-background-color);
     padding: 12px;
